...
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="geofences_added">Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>

...
