package com.udacity.project4

import android.app.Application
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import com.google.android.material.internal.ContextUtils.getActivity
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.coroutines.runBlocking
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.not
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.not

import kotlin.concurrent.thread

//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    // An idling resource that waits for Data Binding to have no pending bindings.
    private val dataBindingIdlingResource = DataBindingIdlingResource()

    @Rule
    @JvmField var mActivityRule: ActivityTestRule<RemindersActivity?>? = ActivityTestRule(RemindersActivity::class.java)


    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                        appContext,
                        get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                        appContext,
                        get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }


//    TODO: add End to End testing to the app
@Test
fun saveRemindersNoLocation() {

    // 1. Start RemindersActivity.
    val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
    dataBindingIdlingResource.monitorActivity(activityScenario)

    // Add active task
    onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())
    onView(withId(R.id.reminderTitle))
        .perform(ViewActions.typeText("TITLE1"), ViewActions.closeSoftKeyboard())
    onView(withId(R.id.reminderDescription))
        .perform(ViewActions.typeText("DESCRIPTION"), closeSoftKeyboard())
    onView(withId(R.id.saveReminder)).perform(click())
    onView(withId(com.google.android.material.R.id.snackbar_text))
            .check(matches(withText(R.string.err_select_location)))

    // 6. Make sure the activity is closed.
    activityScenario.close()
}
    @Test
    fun saveReminders() {

        // 1. Start RemindersActivity.
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        // Add active task
        onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())
        onView(withId(R.id.reminderTitle))
                .perform(ViewActions.typeText("TITLE1"), ViewActions.closeSoftKeyboard())
        onView(withId(R.id.reminderDescription))
                .perform(ViewActions.typeText("DESCRIPTION"), closeSoftKeyboard())
        onView(withId(R.id.selectLocation)).perform(ViewActions.click())
        onView(withId(R.id.map)).perform(ViewActions.click())
        onView(withId(R.id.save_button)).perform(ViewActions.click())
        onView(withId(R.id.saveReminder)).perform(click())
        onView(withText(R.string.geofences_added)).inRoot(withDecorView(not(mActivityRule?.getActivity()?.getWindow()?.getDecorView()))).check(matches(isDisplayed()))
        // onView(withText(R.string.geofences_added)).inRoot(ToastMatcher()).check(matches(isDisplayed()))

        // 6. Make sure the activity is closed.
        activityScenario.close()
    }

}
